# xgress-scraper

./: .gitignore  README.md  pyproject.toml  xgress-scraper.py
xgress_scraper/: __init__.py  db.py  scraper.py
