[tool.poetry]
name = "xgress-scraper"
version = "0.1.0"
description = ""
authors = ["UnknownMemory"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
types-requests = "^2.31.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
